# range-set-blaze

./: .env  .gitignore  AGENTS.md  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  benchf.bat  build.rs  del.diff  del.tsv  dellib.rs  deny.toml  justfile  rustc-ice-2023-11-23T15_48_52-67076.txt  rustc-ice-2023-11-23T15_48_59-70936.txt  rustc-ice-2024-12-22T02_27_08-2272672.txt  test.bat  useful.bat  useful.md  useful.sh
.cargo/: config.toml  deny.toml
.github/workflows/: ci.yml  no_std.yml  tests.yml
benches/: bench.bat  bench.md  bench.rs  bench_map.rs  summary.py  summary.tsv  test7.rs
doc/: Examples.xlsx
docs/: CHANGELOG.md  Examples.xlsx  bench.md  bench_map.md  bench_r.md  index.html  styles.css  useful.md
docs/criterion/every_op/1/report/: index.html
docs/criterion/every_op/5030/report/: index.html
docs/criterion/every_op/52/report/: index.html
docs/criterion/every_op/difference/report/: index.html
docs/criterion/every_op/intersection/report/: index.html
docs/criterion/every_op/report/: index.html
docs/criterion/every_op/symmetric difference/report/: index.html
docs/criterion/ingest_clumps_base/10/report/: index.html
docs/criterion/ingest_clumps_base/100/report/: index.html
docs/criterion/ingest_clumps_base/1000/report/: index.html
docs/criterion/ingest_clumps_base/10000/report/: index.html
docs/criterion/ingest_clumps_base/100000/report/: index.html
docs/criterion/ingest_clumps_base/rangesetblaze (ranges)/report/: index.html
docs/criterion/ingest_clumps_base/report/: index.html
docs/criterion/ingest_clumps_easy/1/report/: index.html
docs/criterion/ingest_clumps_easy/10/report/: index.html
docs/criterion/ingest_clumps_easy/range_set (ranges, smallvec)/report/: index.html
docs/criterion/ingest_clumps_integers/1000/report/: index.html
docs/criterion/ingest_clumps_integers/report/: index.html
docs/criterion/ingest_clumps_ranges/1/report/: index.html
docs/criterion/ingest_clumps_ranges/10/report/: index.html
docs/criterion/ingest_clumps_ranges/100/report/: index.html
docs/criterion/ingest_clumps_ranges/1000/report/: index.html
docs/criterion/ingest_clumps_ranges/100000/report/: index.html
docs/criterion/ingest_clumps_ranges/report/: index.html
docs/criterion/report/: index.html
docs/criterion/v2/report/: index.html
docs/criterion/v4/report/: index.html
docs/wasm-demo/: Cargo.toml  index.html
docs/wasm-demo/pkg/: package.json  wasm_demo.d.ts  wasm_demo.js  wasm_demo_bg.wasm  wasm_demo_bg.wasm.d.ts
docs/wasm-led/: Cargo.toml  index.html  script.js  style.css
docs/wasm-led/pkg/: package.json  wasm_led.d.ts  wasm_led.js  wasm_led_bg.wasm  wasm_led_bg.wasm.d.ts
docs/wasm-led/src/: lib.rs
examples/: cluster_file.0.tsv  cluster_file.1.tsv  fonts.rs  linear_algebra.jp.txt  missing.rs  missing2.rs  nine_rules_maps.rs  parity.rs  read_roaring_data.rs  routing.rs  routing_ip4.rs  routing_ip4.tsv  routing_ip6.rs  routing_ip6.tsv  routing_ipv4.rs  routing_ipv4.tsv  routing_ipv6.rs  routing_ipv6.tsv  routing_table1.tsv  simdtest.asm.txt  simdtest.rs  targets.rs
examples/simd/: rust_simd_cheatsheet.md  simd_summary.md
examples/simd/bench_means/: Cargo.toml
examples/simd/is_consecutive/: Cargo.toml
examples/simd/is_consecutive/benches/: bench.rs
examples/simd/is_consecutive/src/: lib.rs  main.rs
examples/simd/is_consecutive0/: Cargo.toml
examples/simd/is_consecutive0/benches/: bench.rs
examples/simd/is_consecutive0/src/: lib.rs
examples/simd/is_consecutive0plus/: Cargo.toml
examples/simd/is_consecutive0plus/src/: lib.rs
examples/simd/is_consecutive1/: Cargo.toml  batch.bat  batch.ps1  build.rs
examples/simd/is_consecutive1/benches/: bench.rs
examples/simd/is_consecutive1/src/: lib.rs
examples/simd/is_consecutive2/: Cargo.toml  bench.sh  build.rs
examples/simd/is_consecutive2/benches/: bench.rs
examples/simd/is_consecutive2/src/: lib.rs
examples/simd/simd_detect/: Cargo.toml
examples/simd/simd_detect/src/: main.rs
examples/simd/simd_hello/: Cargo.toml
examples/simd/simd_hello/src/: main.rs
examples/simd/summarize/: Cargo.toml
examples/simd/summarize/src/: main.rs
examples/simd_detect/: Cargo.toml
examples/simd_detect/src/: main.rs
examples/simd_hello/src/: main.rs
src/: check_sorted_disjoint.rs  dyn_sorted_disjoint.rs  dyn_sorted_disjoint_map.rs  elements.rs  f32.rs  f32_int.rs  f64.rs  f64_int.rs  float.rs  from.rs  from_slice.rs  from_slice_iter.rs  gaps.rs  inner_join_iter_map.rs  integer.rs  intersection.rs  intersection_iter_map.rs  intersection_zip_iter_map.rs  iter.rs  iter_map.rs  keys.rs  kmergeby.rs  lib.rs  lib2.rs  main.rs  map.rs  map_from_iter.rs  map_op.rs  merge.rs  merge_map.rs  merger.rs  multiway.rs  multiway_map.rs  not_iter.rs  not_iter_map.rs  ops.rs  prelude.rs  range_set_blaze.rs  range_values.rs  ranges.rs  (+32 more)
src/float/: finite.rs  total.rs  total_f128.rs  total_f128_int.rs  total_f16.rs  total_f16_int.rs  total_f32.rs  total_f32_int.rs  total_f64.rs  total_f64_int.rs
tests/: api.rs  bitor_precedence_test.rs  float_tests.rs  fonts_wasm.rs  formal.rs  integration_test.rs  integration_test2.rs  map_test.rs  map_tests.rs  set_tests.rs  wasm.rs
tests/common/: Cargo.toml
tests/data/: demo_read.txt
tests/embedded/: Cargo.toml  useful.md
tests/embedded/.cargo/: config.toml
tests/embedded/src/: main.rs
tests/formal/: Rule3.dfy  Rule4.dfy  Rule6.dfy  Rule7.dfy  Rule8a.dfy  Rule8b.dfy  Step9.dfy  countdown.dfy  hello.dfy  useful.bat
tests/ui/: bitxor.rs  bitxor.stderr  integer.rs  integer.stderr  tee.rs  tee.stderr  union_intersection.rs  union_intersection.stderr  untrusted_pairs.rs  untrusted_pairs.stderr
tests/wasm-demo/: Cargo.toml  index.html  useful.md
tests/wasm-demo/src/: lib.rs
tests/wasm-led/: Cargo.toml  index.html  script.js  style.css
tests/wasm-led/pkg/: package.json  wasm_led.js  wasm_led_bg.wasm  wasm_led_bg.wasm.d.ts
tests/wasm-led/src/: lib.rs
tests_common/: Cargo.toml
tests_common/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+6077 files in other folders)
