[package]
name = "wasm-led"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
range-set-blaze = { path = "../..", features = ["alloc"], default-features = false}
lazy_static = "1.4.0"
web-sys = { version = "0.3.68", features = ["console"] }