[package]
name = "tests_common"
version = "0.1.0"
edition = "2024"
description = "Common test utilities for range-set-blaze"
repository = "https://github.com/CarlKCarlK/range-set-blaze"
readme = "../../README.md"
documentation = "https://docs.rs/range-set-blaze/latest/range-set-blaze/"
license = "MIT OR Apache-2.0"
keywords = ["set", "range", "data-structures", "no_std", "wasm"]
categories = ["data-structures", "no-std", "wasm"]

[dependencies]
rand = "0.9.0"
range-set-blaze = { path = "../..", version = "0.2.0-alpha3" }
num-integer = "0.1.46"
num-traits = "0.2.19"
