[package]
edition = "2021"
name = "embedded"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.4.4"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
# reference your local project here
range-set-blaze = { path = "../..", features = [
    "alloc",
    "from_slice",
], default-features = false }

[[bin]]
name = "embedded"
test = false
bench = false
