[package]
edition = "2024"
name = "embedded"
version = "0.1.0"
description = "Example for embedded target"
repository = "https://github.com/CarlKCarlK/range-set-blaze"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["set", "range", "data-structures", "no_std", "embedded"]
categories = ["data-structures", "no-std", "embedded"]
publish = false

[dependencies]
alloc-cortex-m = "0.4.4"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
# reference your local project here
range-set-blaze = { path = "../..", features = [
    "rog_experimental",
    "from_slice",
], default-features = false }

[[bin]]
name = "embedded"
test = false
bench = false
