[package]
name = "wasm-led"
version = "0.1.0"
edition = "2024"
description = "LED example for WASM target"
repository = "https://github.com/CarlKCarlK/range-set-blaze"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["set", "range", "data-structures", "no_std", "wasm"]
categories = ["data-structures", "no-std", "wasm"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
range-set-blaze = { path = "../..", default-features = false }
lazy_static = "1.4.0"
web-sys = { version = "0.3.68", features = ["console"] }
