# cmk [workspace]

[package]
name = "is_consecutive1"
version = "0.1.0"
edition = "2021"

[dependencies]
num-integer = { version = "0.1.44", optional = true, default-features = false }
num-traits = { version = "0.2.15", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
syntactic-for = "0.1.1"


[lib]

[[bench]]
name = "bench"
harness = false
